<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaletteFragment">

    <TextView
        android:id="@+id/settings_titile"
        android:layout_width="394dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textColor="#9C27B0" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:text="@string/save_button" />

    <RadioGroup
        android:id="@+id/radio-group"
        android:layout_width="113dp"
        android:layout_height="147dp"
        android:layout_marginTop="196dp">

        <RadioButton
            android:id="@+id/color_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/color_blue"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/color_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FF00"
            android:text="@string/color_green"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/color_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/color_red"
            android:textColor="#FFFFFF" />


        <RadioButton
            android:id="@+id/color_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFF00"
            android:text="@string/color_yellow"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="61dp"
        android:layout_marginTop="108dp"
        android:text="@string/settings_text1" />

</FrameLayout>